--- a/src/styles/partials/_general.scss
+++ b/src/styles/partials/_general.scss
@@ -1,3 +1,29 @@
+.transition {
+	-webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
+
+.btn {
+	@extend .transition;
+	background: $blue;
+	color: #fff;
+	padding: 15px 15px 10px 15px;
+	text-transform: uppercase;
+	border: 1px solid #fff;
+	font-size: 18px;
+	font-family: $typewriterFont;
+	letter-spacing: 2px;
+	&:focus {
+		outline: 0;
+	}
+	&:hover {
+		background-color: #000;
+	}
+}
+
 .app {
 	text-align: center;
 	p {
@@ -5,15 +31,11 @@
 	}
 }
 
-#splash-page {
-	width: 100%;
-	height: 100vh;
-	overflow: hidden;
-
+#text-excerpt {
+	.book {
+		max-width: 600px;
+		width: 100%;
+		margin: auto;
+	}
 }
 
-.book-cover {
-	max-width: 200px;
-	width: 100%;
-	margin: auto;
-}
