Checking correct words are typed, Highlighting correct words typed

--- a/src/styles/partials/_custom.scss
+++ b/src/styles/partials/_custom.scss
@@ -2,3 +2,16 @@
 .typing-field {
 	font-size: 20px;
 }
+
+.current-word {
+	font-weight: 800 !important;
+}
+
+.right-char {
+	color: green !important;
+}
+
+
+.wrong-char {
+	color: red !important;
+}
