Each letter correct is colored green, each letter incorrect is colored red, each current word is underlined

--- a/src/styles/partials/_custom.scss
+++ b/src/styles/partials/_custom.scss
@@ -1,10 +1,10 @@
 
-.typing-field {
+#typing-field {
 	font-size: 20px;
 }
 
 .current-word {
-	font-weight: 800 !important;
+	text-decoration: underline;
 }
 
 .right-char {
