--- a/src/styles/partials/_custom.scss
+++ b/src/styles/partials/_custom.scss
@@ -1,10 +1,10 @@
 
-#typing-field {
+.typing-field {
 	font-size: 20px;
 }
 
 .current-word {
-	text-decoration: underline;
+	font-weight: 800 !important;
 }
 
 .right-char {
