--- a/src/styles/partials/_custom.scss
+++ b/src/styles/partials/_custom.scss
@@ -5,12 +5,12 @@
 
 .current-word {
 	font-weight: 800 !important;
+	text-decoration: underline !important;
 }
 
 .right-char {
 	color: green !important;
 }
-
 
 .wrong-char {
 	color: red !important;
