--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -9,7 +9,8 @@ header {
 		font-family: $typewriterFont;
 		color: #fff;
 		float: left;
-		padding-left: 30px;
+		padding-left: 20px;
+		font-size: 25px;
 
 	}
 	ul {
